--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -261,7 +261,7 @@
     "temperature_march = df_temp_march.rename(columns={\"249190890;B00300S;2018-03-01 00:00;-19\": \"temp1\", \"10;\": \"temp2\"})\n",
     "temperature_april = df_temp_april.rename(columns={\"249190890;B00300S;2018-04-01 00:00;7\": \"temp1\", \"20;\": \"temp2\"})\n",
     "\n",
-    "# rozdzielenie pierwszej kolumny na kod stacji i datę odczytu temperatury\n",
+    "# split of the first column into station code and temperature reading date\n",
     "temperature_df = pd.DataFrame(columns = ['city_code', 'date'])\n",
     "temperature_df['date'] = temperature_march['temp1'].str[18:34]\n",
     "temperature_df['city_code'] = temperature_march['temp1'].str[0:9]"
@@ -284,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# extract from year, month, day, hour and minute data frames\n",
+    "# extract year, month, day, hour and minute from data frames\n",
     "cops = pd.DataFrame({'year': total_temp['date'].str[0:4],\n",
     "                 'month': total_temp['date'].str[5:7],\n",
     "                 'day': total_temp['date'].str[8:11],\n",
@@ -299,11 +299,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# przekonwertowanie drugiej kolumny na str i \"wydobycie\" z niej części dziesiętnej\n",
+    "# convert second column to str and \"extract\" a decimal from it\n",
     "temperature_march['temp2'] = temperature_march['temp2'].astype(str).str[0]  \n",
     "temperature_april['temp2'] = temperature_april['temp2'].astype(str).str[0]\n",
     "\n",
-    "# \"wydobycie\" z pierwszej kolumny wartości jedności, bądź dziesiątek temperatur\n",
+    "# extract from the first column the value of the unity or tens of temperatures values\n",
     "temperature_march['temp1'] = temperature_march['temp1'].str[35:]\n",
     "temperature_march['temp1'] = temperature_march['temp1'].replace(';','', regex=True)\n",
     "\n",
@@ -324,15 +324,8 @@
     "\n",
     "new_temp2 = temperature_april['temp2'].copy()\n",
     "temperature_april['temp1'] = temperature_april['temp1'].str.cat(new_temp2, sep='.')\n",
-    "temperature_april= temperature_april.drop(temperature_april.columns[[1]], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "temperature_april= temperature_april.drop(temperature_april.columns[[1]], axis=1)\n",
+    "\n",
     "temp_all = pd.concat([temperature_march, temperature_april])\n",
     "temp_all = temp_all.reset_index(drop=True) \n",
     "total_temp['temperature'] = temp_all"
@@ -344,16 +337,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ = pd.merge(df, total_temp, how='left', on=['date', 'city_code']) # dołączanie do głównej ramki danych informacji o temperaturze"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_['temperature'] = pd.to_numeric(df_['temperature']) # zmiana typu danych kolumny z wartościami temp. z str na int"
+    "df_ = pd.merge(df, total_temp, how='left', on=['date', 'city_code']) # append the temperature information to the main data frame\n",
+    "df_['temperature'] = pd.to_numeric(df_['temperature']) # change the data type of column with temp values from str to int"
    ]
   },
   {
@@ -460,7 +445,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.merge(df_, rainfall_all, how='left', on=['date', 'date']) # appending rainfall information to the main data frame"
+    "df = pd.merge(df_, rainfall_all, how='left', on=['date', 'date']) # append rainfall information to the main data frame"
    ]
   },
   {
@@ -2673,6 +2658,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file(\"gmapa.html\")\n",
+    "\n",
+    "map_options = GMapOptions(lat=52.2, lng=21, map_type=\"roadmap\", zoom=11)\n",
+    "\n",
+    "afternoon = gmap(\"AIzaSyAJ6lACZs4QJqOS_xE2uumL_QsEJT_7CUM\", map_options, title=\"Popularne stacje rowerowe w Warszawie popołudniem\")\n",
+    "\n",
+    "popular_lafternoon_ = ColumnDataSource(\n",
+    "    data=dict(\n",
+    "        lat=popular_lafternoon.lat.tolist(),\n",
+    "        lon=popular_lafternoon.lng.tolist()\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "\n",
+    "afternoon.circle(x=\"lon\", y=\"lat\", size=12, fill_color=\"red\", fill_alpha=0.8, source=popular_lafternoon_)\n",
+    "\n",
+    "show(morning) # wyświetla mapę Warszawy z popularnymi stacjami rowerowymi ranem\n",
+    "show(afternoon) # wyświetla mapę Warszawy z popularnymi stacjami rowerowymi popołudniem"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2860,18 +2871,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "x = df[['weekDay', 'dayPart', 'temp', 'rain', 'wind', 'hour', 'prevRent', 'date', 'day']]\n",
-    "y = df['rentBikes']\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size = 0.20, random_state = 0)\n",
-    "x_train, x_valid, y_train, y_valid = train_test_split(x_train, y_train, test_size = 0.25, random_state = 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -2880,40 +2879,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start_time = time.time()\n",
-    "bike_track = (df.set_index(['name', 'date', 'uid', 'lat', 'lng'])\n",
-    "            ['bike_numbers'].str.split(',', expand=True)\n",
-    "            .stack()\n",
-    "            .reset_index(name='bike_numbers')\n",
-    "            .drop('level_5',1))\n",
-    "\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bike_track = bike_track.rename(columns={\"bike_numbers\": \"bike_number\",\"name\": \"station A\", \"date\": \"start_time\", \"lat\": \"lat_A\", \"lng\": \"lng_A\", \"uid\": \"ID_A\"})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "routes = bike_track.groupby(['station A', 'bike_number', 'station B']).size().reset_index(name='count')"
-   ]
   }
  ],
  "metadata": {
