Exploratory data analysis
Analysis of the popularity of bike routes

--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -976,7 +976,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1. Analysis of changes in temperature and rainfall"
+    "### 3.1 Analysis of the popularity of bicycle routes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = time.time()\n",
+    "bike_track = (df.set_index(['name', 'date', 'uid', 'lat', 'lng'])\n",
+    "            ['bike_numbers'].str.split(',', expand=True)\n",
+    "            .stack()\n",
+    "            .reset_index(name='bike_numbers')\n",
+    "            .drop('level_5',1))\n",
+    "\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike_track['bike_numbers'] = bike_track['bike_numbers'].replace('?', np.nan) \n",
+    "bike_track.dropna(subset=['bike_numbers'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = time.time()\n",
+    "bike_track_df = bike_track.pivot_table(index='date',\n",
+    "                                     columns=['bike_numbers'], \n",
+    "                                     values='name',\n",
+    "                                     aggfunc=lambda x: ' '.join(x))\n",
+    "\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2. Analysis of changes in temperature and rainfall"
    ]
   },
   {
@@ -1045,7 +1093,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2. Analysis of bikes station"
+    "### 3.3. Analysis of bikes station"
    ]
   },
   {
@@ -2839,46 +2887,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bikes_station = pd.DataFrame(meds).reset_index()\n",
-    "bikes_station= bikes_station.rename(columns={\"index\": \"name\", 0: \"median\"})"
+    "output_file(\"gmapa.html\")\n",
+    "\n",
+    "map_options = GMapOptions(lat=52.2, lng=21, map_type=\"roadmap\", zoom=11)\n",
+    "\n",
+    "p = gmap(\"AIzaSyAJ6lACZs4QJqOS_xE2uumL_QsEJT_7CUM\", map_options, title=\"Warszawa\")\n",
+    "\n",
+    "unpopular_ = ColumnDataSource(\n",
+    "    data=dict(\n",
+    "        lat=unpopular_bs.lat.tolist(),\n",
+    "        lon=unpopular_bs.lng.tolist()\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "medium_popular_ = ColumnDataSource(\n",
+    "    data=dict(\n",
+    "        lat=medium_popular_bs.lat.tolist(),\n",
+    "        lon=medium_popular_bs.lng.tolist()\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "very_popular_ = ColumnDataSource(\n",
+    "    data=dict(\n",
+    "        lat=very_popular_bs.lat.tolist(),\n",
+    "        lon=very_popular_bs.lng.tolist()\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "# wyświetla mape Warszawy z podzielonymi stacjami wg ich popularności\n",
+    "p.circle(x=\"lon\", y=\"lat\", size=10, fill_color=\"#f7fbff\", fill_alpha=0.8, source=unpopular_, legend_label=\"Mało popularne stacje rowerowe\")\n",
+    "p.circle(x=\"lon\", y=\"lat\", size=10, fill_color=\"#6baed6\", fill_alpha=0.8, source=medium_popular_, legend_label=\"Umiarkowanie popularne stacje rowerowe\")\n",
+    "p.circle(x=\"lon\", y=\"lat\", size=10, fill_color=\"midnightblue\", fill_alpha=0.8, source=very_popular_, legend_label=\"Popularne stacje rowerowe\")\n",
+    "\n",
+    "show(p)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(columns = ['date','year','month', 'day', 'hour', 'minute', 'rentBikes'])  \n",
-    "for fileName in fileList:\n",
-    "    if os.path.getsize(fileName) > 10000:\n",
-    "        with open(fileName, 'r') as json_file:\n",
-    "            data = json.load(json_file)\n",
-    "        df2 = pd.DataFrame([[\n",
-    "            fileName.split('\\\\')[2][0:13],\n",
-    "            fileName.split('\\\\')[2][0:4],\n",
-    "            fileName.split('\\\\')[2][4:6],\n",
-    "            fileName.split('\\\\')[2][6:8],\n",
-    "            fileName.split('\\\\')[2][9:11],\n",
-    "            fileName.split('\\\\')[2][11:13],\n",
-    "            int(data[0]['region_info']['set_point_bikes']) - int(data[0]['region_info'][\"available_bikes\"])\n",
-    "        ]], columns = ['date','year','month', 'day', 'hour', 'minute', 'rentBikes'])\n",
-    "        df = df.append(df2) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
