--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -261,7 +261,7 @@
     "temperature_march = df_temp_march.rename(columns={\"249190890;B00300S;2018-03-01 00:00;-19\": \"temp1\", \"10;\": \"temp2\"})\n",
     "temperature_april = df_temp_april.rename(columns={\"249190890;B00300S;2018-04-01 00:00;7\": \"temp1\", \"20;\": \"temp2\"})\n",
     "\n",
-    "# split of the first column into station code and temperature reading date\n",
+    "# rozdzielenie pierwszej kolumny na kod stacji i datę odczytu temperatury\n",
     "temperature_df = pd.DataFrame(columns = ['city_code', 'date'])\n",
     "temperature_df['date'] = temperature_march['temp1'].str[18:34]\n",
     "temperature_df['city_code'] = temperature_march['temp1'].str[0:9]"
@@ -284,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# extract year, month, day, hour and minute from data frames\n",
+    "# extract from year, month, day, hour and minute data frames\n",
     "cops = pd.DataFrame({'year': total_temp['date'].str[0:4],\n",
     "                 'month': total_temp['date'].str[5:7],\n",
     "                 'day': total_temp['date'].str[8:11],\n",
@@ -299,11 +299,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# convert second column to str and \"extract\" a decimal from it\n",
+    "# przekonwertowanie drugiej kolumny na str i \"wydobycie\" z niej części dziesiętnej\n",
     "temperature_march['temp2'] = temperature_march['temp2'].astype(str).str[0]  \n",
     "temperature_april['temp2'] = temperature_april['temp2'].astype(str).str[0]\n",
     "\n",
-    "# extract from the first column the value of the unity or tens of temperatures values\n",
+    "# \"wydobycie\" z pierwszej kolumny wartości jedności, bądź dziesiątek temperatur\n",
     "temperature_march['temp1'] = temperature_march['temp1'].str[35:]\n",
     "temperature_march['temp1'] = temperature_march['temp1'].replace(';','', regex=True)\n",
     "\n",
@@ -324,8 +324,15 @@
     "\n",
     "new_temp2 = temperature_april['temp2'].copy()\n",
     "temperature_april['temp1'] = temperature_april['temp1'].str.cat(new_temp2, sep='.')\n",
-    "temperature_april= temperature_april.drop(temperature_april.columns[[1]], axis=1)\n",
-    "\n",
+    "temperature_april= temperature_april.drop(temperature_april.columns[[1]], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "temp_all = pd.concat([temperature_march, temperature_april])\n",
     "temp_all = temp_all.reset_index(drop=True) \n",
     "total_temp['temperature'] = temp_all"
@@ -337,8 +344,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ = pd.merge(df, total_temp, how='left', on=['date', 'city_code']) # append the temperature information to the main data frame\n",
-    "df_['temperature'] = pd.to_numeric(df_['temperature']) # change the data type of column with temp values from str to int"
+    "df_ = pd.merge(df, total_temp, how='left', on=['date', 'city_code']) # dołączanie do głównej ramki danych informacji o temperaturze"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_['temperature'] = pd.to_numeric(df_['temperature']) # zmiana typu danych kolumny z wartościami temp. z str na int"
    ]
   },
   {
@@ -445,7 +460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.merge(df_, rainfall_all, how='left', on=['date', 'date']) # append rainfall information to the main data frame"
+    "df = pd.merge(df_, rainfall_all, how='left', on=['date', 'date']) # appending rainfall information to the main data frame"
    ]
   },
   {
@@ -976,7 +991,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1 Analysis of the popularity of bicycle routes"
+    "### 3.1. Analysis of the popularity of bike routes"
    ]
   },
   {
@@ -1001,8 +1016,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bike_track['bike_numbers'] = bike_track['bike_numbers'].replace('?', np.nan) \n",
-    "bike_track.dropna(subset=['bike_numbers'], inplace=True)"
+    "start_time = time.time()\n",
+    "bike_track_df = bike_track.pivot_table(index='date',\n",
+    "                                     columns=['bike_numbers'], \n",
+    "                                     values='name',\n",
+    "                                     aggfunc=lambda x: ' '.join(x))\n",
+    "\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
    ]
   },
   {
@@ -1011,13 +1031,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_time = time.time()\n",
-    "bike_track_df = bike_track.pivot_table(index='date',\n",
-    "                                     columns=['bike_numbers'], \n",
-    "                                     values='name',\n",
-    "                                     aggfunc=lambda x: ' '.join(x))\n",
-    "\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+    "bike_track_df_ = bike_track_df.fillna(method='ffill')\n",
+    "bike_track_df_ = bike_track_df_.transpose()\n",
+    "bike_track_df_ = bike_track_df_.dropna()\n",
+    "bike_track_df_ = bike_track_df_.transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counter = Counter()\n",
+    "for col in bike_track_df_.columns: # przeszukanie zbioru i wypisanie par stacji, pomiędzy którymi rowery najczęściej się przemieszczały\n",
+    "    routes = list(zip(bike_track_df_[col].shift(1, fill_value=bike_track_df_[col][0]), bike_track_df_[col]))\n",
+    "    routes = [(k, v) for k, v in routes if k != v]\n",
+    "    counter.update(routes)\n",
+    "counter.most_common(15)"
    ]
   },
   {
@@ -1765,7 +1796,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3. Interactive grouping of bikes stations using the Folium library"
+    "### 3.4. Interactive grouping of bikes stations using the Folium library"
    ]
   },
   {
@@ -1816,7 +1847,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4. Visualization of bike sharing data as a time series"
+    "### 3.5. Visualization of bike sharing data as a time series"
    ]
   },
   {
@@ -2706,32 +2737,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_file(\"gmapa.html\")\n",
-    "\n",
-    "map_options = GMapOptions(lat=52.2, lng=21, map_type=\"roadmap\", zoom=11)\n",
-    "\n",
-    "afternoon = gmap(\"AIzaSyAJ6lACZs4QJqOS_xE2uumL_QsEJT_7CUM\", map_options, title=\"Popularne stacje rowerowe w Warszawie popołudniem\")\n",
-    "\n",
-    "popular_lafternoon_ = ColumnDataSource(\n",
-    "    data=dict(\n",
-    "        lat=popular_lafternoon.lat.tolist(),\n",
-    "        lon=popular_lafternoon.lng.tolist()\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "\n",
-    "afternoon.circle(x=\"lon\", y=\"lat\", size=12, fill_color=\"red\", fill_alpha=0.8, source=popular_lafternoon_)\n",
-    "\n",
-    "show(morning) # wyświetla mapę Warszawy z popularnymi stacjami rowerowymi ranem\n",
-    "show(afternoon) # wyświetla mapę Warszawy z popularnymi stacjami rowerowymi popołudniem"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2784,6 +2789,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
    "outputs": [
@@ -2822,14 +2834,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# wyodrebnienie ze zbioru danych informacji o stacjach, które mają w nazwie \"Metro\"\n",
-    "metro_bs_df = bikes_df.reset_index()\n",
-    "metro_bs_df = metro_bs_df[metro_bs_df.name.str.contains(\"Metro\")]\n",
-    "metro_df = metro_bs_df.pivot_table(index='name', columns=['date_', 'temperature', 'rainfall'], values='bikes_rental')\n",
-    "sort_rent_ = metro_df.transpose()\n",
-    "sort_rent_ = sort_rent_.reset_index().rename_axis(None, axis=1)\n",
-    "sort_rent_ = sort_rent_.iloc[:, 3:]"
+    "# najbardziej popularne stacje rowerowe w poszczególnych dniach tygodnia\n",
+    "df_week = warsaw_bikes_rent.groupby(['date_', 'name']).bikes_rental.sum().reset_index()\n",
+    "df_week = df_week.rename(columns = {\"date_\": \"day_of_week\"})\n",
+    "df_week = df_week.groupby([pd.to_datetime(df_week['day_of_week']).dt.dayofweek ,'name'])['bikes_rental'].median()\n",
+    "df_week.loc[df_week.groupby(level=0).idxmax()]"
    ]
   },
   {
@@ -2862,12 +2879,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# najbardziej popularne stacje rowerowe w poszczególnych dniach tygodnia\n",
-    "df_week = warsaw_bikes_rent.groupby(['date_', 'name']).bikes_rental.sum().reset_index()\n",
-    "df_week = df_week.rename(columns = {\"date_\": \"day_of_week\"})\n",
-    "df_week = df_week.groupby([pd.to_datetime(df_week['day_of_week']).dt.dayofweek ,'name'])['bikes_rental'].median()\n",
-    "df_week.loc[df_week.groupby(level=0).idxmax()]"
+    "bike_track['bike_numbers'] = bike_track['bike_numbers'].replace('?', np.nan) \n",
+    "bike_track.dropna(subset=['bike_numbers'], inplace=True)"
    ]
   },
   {
@@ -2876,9 +2904,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pop_hourly = pd.DataFrame(df_hourly)\n",
-    "most_pop_hourly = pop_hourly['bikes_rental'].groupby(level=0, group_keys=False)\n",
-    "most_pop_hourly.nlargest(2) # 2 najpopularniejsze stacje w każdej godzinie"
+    "bike_track = bike_track.rename(columns={\"bike_numbers\": \"bike_number\",\"name\": \"station A\", \"date\": \"start_time\", \"lat\": \"lat_A\", \"lng\": \"lng_A\", \"uid\": \"ID_A\"})\n"
    ]
   },
   {
@@ -2887,39 +2913,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file(\"gmapa.html\")\n",
+    "bike_track = bike_track.sort_values(['bike_number', 'start_time'], ascending=[True, True])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = time.time()\n",
+    "bike_track = (df.set_index(['name', 'date', 'uid', 'lat', 'lng'])\n",
+    "            ['bike_numbers'].str.split(',', expand=True)\n",
+    "            .stack()\n",
+    "            .reset_index(name='bike_numbers')\n",
+    "            .drop('level_5',1))\n",
     "\n",
-    "map_options = GMapOptions(lat=52.2, lng=21, map_type=\"roadmap\", zoom=11)\n",
-    "\n",
-    "p = gmap(\"AIzaSyAJ6lACZs4QJqOS_xE2uumL_QsEJT_7CUM\", map_options, title=\"Warszawa\")\n",
-    "\n",
-    "unpopular_ = ColumnDataSource(\n",
-    "    data=dict(\n",
-    "        lat=unpopular_bs.lat.tolist(),\n",
-    "        lon=unpopular_bs.lng.tolist()\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "medium_popular_ = ColumnDataSource(\n",
-    "    data=dict(\n",
-    "        lat=medium_popular_bs.lat.tolist(),\n",
-    "        lon=medium_popular_bs.lng.tolist()\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "very_popular_ = ColumnDataSource(\n",
-    "    data=dict(\n",
-    "        lat=very_popular_bs.lat.tolist(),\n",
-    "        lon=very_popular_bs.lng.tolist()\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "# wyświetla mape Warszawy z podzielonymi stacjami wg ich popularności\n",
-    "p.circle(x=\"lon\", y=\"lat\", size=10, fill_color=\"#f7fbff\", fill_alpha=0.8, source=unpopular_, legend_label=\"Mało popularne stacje rowerowe\")\n",
-    "p.circle(x=\"lon\", y=\"lat\", size=10, fill_color=\"#6baed6\", fill_alpha=0.8, source=medium_popular_, legend_label=\"Umiarkowanie popularne stacje rowerowe\")\n",
-    "p.circle(x=\"lon\", y=\"lat\", size=10, fill_color=\"midnightblue\", fill_alpha=0.8, source=very_popular_, legend_label=\"Popularne stacje rowerowe\")\n",
-    "\n",
-    "show(p)"
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike_track = bike_track.rename(columns={\"bike_numbers\": \"bike_number\",\"name\": \"station A\", \"date\": \"start_time\", \"lat\": \"lat_A\", \"lng\": \"lng_A\", \"uid\": \"ID_A\"})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "routes = bike_track.groupby(['station A', 'bike_number', 'station B']).size().reset_index(name='count')"
    ]
   }
  ],
