--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -1043,12 +1043,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counter = Counter()\n",
-    "for col in bike_track_df_.columns: # przeszukanie zbioru i wypisanie par stacji, pomiędzy którymi rowery najczęściej się przemieszczały\n",
-    "    routes = list(zip(bike_track_df_[col].shift(1, fill_value=bike_track_df_[col][0]), bike_track_df_[col]))\n",
-    "    routes = [(k, v) for k, v in routes if k != v]\n",
-    "    counter.update(routes)\n",
-    "counter.most_common(15)"
+    "\"\"\"\n",
+    "latA = regular_routes_.lat_A.tolist()\n",
+    "lngA = regular_routes_.lng_A.tolist()\n",
+    "latB = regular_routes_.lat_B.tolist()\n",
+    "lngB = regular_routes_.lng_B.tolist()\n",
+    "\n",
+    "gmap = gmplot.GoogleMapPlotter(52.21,21, 13) \n",
+    "\n",
+    "for i in range(len(regular_routes_)):  # trasy rysowane są w petli, aby nie łączyć kolejnych węzłów\n",
+    "    \n",
+    "    x = [ latA[i], latB[i] ]\n",
+    "    y = [ lngA[i], lngB[i] ]\n",
+    "    \n",
+    "    gmap.scatter(x, y,'# FF0000',size = 40, marker = False ) \n",
+    "  \n",
+    "    gmap.plot(x, y,'white', edge_width = 1.5) \n",
+    "\n",
+    "# mapa Warszawy z regularnymi trasami \n",
+    "gmap.draw(\"map.html\")\n",
+    "\"\"\""
    ]
   },
   {
