Add temp_data_preprocessing function

--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -44,7 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 142.7642514705658 seconds ---\n"
+      "--- 108.19883990287781 seconds ---\n"
      ]
     }
    ],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "2  249190890;B00300S;2018-03-01 00:30;-19  20;"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,91 +251,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_temp_march = df_temp_march.fillna(0) \n",
-    "df_temp_april = df_temp_april.fillna(0)\n",
+    "def temp_data_preprocessing(df_temp_march, df_temp_april):\n",
     "\n",
-    "temperature_march = df_temp_march.rename(columns={\"249190890;B00300S;2018-03-01 00:00;-19\": \"temp1\", \"10;\": \"temp2\"})\n",
-    "temperature_april = df_temp_april.rename(columns={\"249190890;B00300S;2018-04-01 00:00;7\": \"temp1\", \"20;\": \"temp2\"})\n",
+    "    df_temp_march = df_temp_march.fillna(0) \n",
+    "    df_temp_april = df_temp_april.fillna(0)\n",
     "\n",
-    "# rozdzielenie pierwszej kolumny na kod stacji i datę odczytu temperatury\n",
-    "temperature_df = pd.DataFrame(columns = ['city_code', 'date'])\n",
-    "temperature_df['date'] = temperature_march['temp1'].str[18:34]\n",
-    "temperature_df['city_code'] = temperature_march['temp1'].str[0:9]"
+    "    temperature_march = df_temp_march.rename(columns={\"249190890;B00300S;2018-03-01 00:00;-19\": \"temp1\", \"10;\": \"temp2\"})\n",
+    "    temperature_april = df_temp_april.rename(columns={\"249190890;B00300S;2018-04-01 00:00;7\": \"temp1\", \"20;\": \"temp2\"})\n",
+    "\n",
+    "    # split the column into station code and temperature reading\n",
+    "    temperature_df = pd.DataFrame(columns = ['city_code', 'date'])\n",
+    "    temperature_df['date'] = temperature_march['temp1'].str[18:34]\n",
+    "    temperature_df['city_code'] = temperature_march['temp1'].str[0:9]\n",
+    "\n",
+    "    total_temp = pd.DataFrame(columns = ['city_code', 'date', 'temperature']) \n",
+    "    total_temp['date'] = temperature_df['date'].append(temperature_april['temp1'].str[18:34], ignore_index = True)\n",
+    "    total_temp['city_code'] = temperature_df['city_code'].append(temperature_april['temp1'].str[0:9], ignore_index = True)\n",
+    "\n",
+    "    # extract year, month, day, hour and minute from data frame\n",
+    "    cops = pd.DataFrame({'year': total_temp['date'].str[0:4],\n",
+    "                     'month': total_temp['date'].str[5:7],\n",
+    "                     'day': total_temp['date'].str[8:11],\n",
+    "                     'hour': total_temp['date'].str[11:13],\n",
+    "                     'minutes': total_temp['date'].str[14:17]})\n",
+    "    total_temp['date'] = pd.to_datetime(cops) # create a column with the date of temperature reading\n",
+    "\n",
+    "    # convert second column to str and extract a decimal from it\n",
+    "    temperature_march['temp2'] = temperature_march['temp2'].astype(str).str[0]  \n",
+    "    temperature_april['temp2'] = temperature_april['temp2'].astype(str).str[0]\n",
+    "\n",
+    "    # \"wydobycie\" z pierwszej kolumny wartości jedności, bądź dziesiątek temperatur\n",
+    "    temperature_march['temp1'] = temperature_march['temp1'].str[35:]\n",
+    "    temperature_march['temp1'] = temperature_march['temp1'].replace(';','', regex=True)\n",
+    "\n",
+    "    temperature_april['temp1'] = temperature_april['temp1'].str[35:]\n",
+    "    temperature_april['temp1'] = temperature_april['temp1'].replace(';','', regex=True)\n",
+    "\n",
+    "    # połączenie częsci dziesiątek/jedności z pierwszej kolumny z częścią dziesiętną z drugiej kolumny\n",
+    "    new_temp1 = temperature_march['temp2'].copy()\n",
+    "    temperature_march['temp1'] = temperature_march['temp1'].str.cat(new_temp1, sep='.')\n",
+    "    temperature_march= temperature_march.drop(temperature_march.columns[[1]], axis=1)\n",
+    "\n",
+    "    new_temp2 = temperature_april['temp2'].copy()\n",
+    "    temperature_april['temp1'] = temperature_april['temp1'].str.cat(new_temp2, sep='.')\n",
+    "    temperature_april= temperature_april.drop(temperature_april.columns[[1]], axis=1)\n",
+    "\n",
+    "    temp_all = pd.concat([temperature_march, temperature_april])\n",
+    "    temp_all = temp_all.reset_index(drop=True) \n",
+    "    total_temp['temperature'] = temp_all\n",
+    "    return total_temp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_temp = pd.DataFrame(columns = ['city_code', 'date', 'temperature']) \n",
-    "total_temp['date'] = temperature_df['date'].append(temperature_april['temp1'].str[18:34], ignore_index = True)\n",
-    "total_temp['city_code'] = temperature_df['city_code'].append(temperature_april['temp1'].str[0:9], ignore_index = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# extract from year, month, day, hour and minute data frames\n",
-    "cops = pd.DataFrame({'year': total_temp['date'].str[0:4],\n",
-    "                 'month': total_temp['date'].str[5:7],\n",
-    "                 'day': total_temp['date'].str[8:11],\n",
-    "                 'hour': total_temp['date'].str[11:13],\n",
-    "                 'minutes': total_temp['date'].str[14:17]})\n",
-    "total_temp['date'] = pd.to_datetime(cops) # create a column with the date of temperature reading"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# przekonwertowanie drugiej kolumny na str i \"wydobycie\" z niej części dziesiętnej\n",
-    "temperature_march['temp2'] = temperature_march['temp2'].astype(str).str[0]  \n",
-    "temperature_april['temp2'] = temperature_april['temp2'].astype(str).str[0]\n",
-    "\n",
-    "# \"wydobycie\" z pierwszej kolumny wartości jedności, bądź dziesiątek temperatur\n",
-    "temperature_march['temp1'] = temperature_march['temp1'].str[35:]\n",
-    "temperature_march['temp1'] = temperature_march['temp1'].replace(';','', regex=True)\n",
-    "\n",
-    "temperature_april['temp1'] = temperature_april['temp1'].str[35:]\n",
-    "temperature_april['temp1'] = temperature_april['temp1'].replace(';','', regex=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# połączenie częsci dziesiątek/jedności z pierwszej kolumny z częścią dziesiętną z drugiej kolumny\n",
-    "new_temp1 = temperature_march['temp2'].copy()\n",
-    "temperature_march['temp1'] = temperature_march['temp1'].str.cat(new_temp1, sep='.')\n",
-    "temperature_march= temperature_march.drop(temperature_march.columns[[1]], axis=1)\n",
-    "\n",
-    "new_temp2 = temperature_april['temp2'].copy()\n",
-    "temperature_april['temp1'] = temperature_april['temp1'].str.cat(new_temp2, sep='.')\n",
-    "temperature_april= temperature_april.drop(temperature_april.columns[[1]], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp_all = pd.concat([temperature_march, temperature_april])\n",
-    "temp_all = temp_all.reset_index(drop=True) \n",
-    "total_temp['temperature'] = temp_all"
+    "total_temp = temp_data_preprocessing(df_temp_march, df_temp_april)"
    ]
   },
   {
@@ -344,21 +321,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ = pd.merge(df, total_temp, how='left', on=['date', 'city_code']) # dołączanie do głównej ramki danych informacji o temperaturze"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_ = pd.merge(df, total_temp, how='left', on=['date', 'city_code']) # dołączanie do głównej ramki danych informacji o temperaturze\n",
     "df_['temperature'] = pd.to_numeric(df_['temperature']) # zmiana typu danych kolumny z wartościami temp. z str na int"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +414,7 @@
        "695 2018-04-01 23:00:00       0.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +519,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +568,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
